# PyProjectTemplate

./: .dockerignore  .easydata.json  .easydata.yml  .pre-commit-config.yaml  Dockerfile  README.md  cuda-cudnn.sh  dev-config.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  setup.py  sweep.yaml
